--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Toaster 🍞</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="buttons">
+        <button>Success</button>
+        <button>Error</button>
+        <button>Invalid</button>
+
+    </div>
     
 </body>
 </html>
