Added progress bar and moveleft animation to toast notifications.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
                 toast.classList.add('invalid');
             }
 
+            setTimeout(() => {
+                toast.remove();
+            }, 4000);
+
         }
     </script>
     
