--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <!-- <meta charset="UTF-8"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Toaster 🍞</title>
+    <title>JS Toaster</title>
+    <link rel="icon" href="toast.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/12fc3d9863.js" crossorigin="anonymous"></script>
 </head>
